[PAYS-111] Implement Time-Based Fee Discounts